--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,16 @@
 @layer base {
   :root {
     --font-inter: 'Inter', sans-serif;
+    --color-light-gray: #E7E7E7;
+    --color-gray: #D9D9D9;
+    --color-dark-gray: #969696;
+    --color-green-button: #23CC3D;
+    --color-yellow-button: #FCB933;
+    --color-red-button: #FF5F53;
+    --color-blue: #107EFF;
+    --color-sky-blue: #009CFF;
+    --color-black: #000000;
+    --color-white: #FFFFFF;
   }
 }
 
